ctowasm/test/samples/error/initializer/incompatible_scalar_nested_braces.c
// Incompatible eleents in initializer of scalar in intializer list
int main() {
  struct X { int x; } x;
  int y = {{x}};
}